Changing the scramble view size now no longer causes blurring.

--- a/tnt/src/css/tnt.css
+++ b/tnt/src/css/tnt.css
@@ -7,7 +7,7 @@ body {
 }
 img {
     border: none;
-    padding: 1px;
+    /*padding: 1px;*/
 }
 
 .link {
